moved styling to styles.css

--- a/style.css
+++ b/style.css
@@ -50,6 +50,16 @@ body {
   --fc-event-border-color: #38ABAB;
 }
 
+.fc-event[data-title*="Office Hours"] {
+    background-color: #99DEDE !important;
+    color: black !important;
+    border-color: #99DEDE !important;
+}
+
+.fc-event[data-title*="Office Hours"] > div {
+  color: black !important;
+}
+
 .fc-event-title {
   color: #FFF6F0;
 }
